# povic

./: .gitignore  Cargo.toml  flake.nix
src/: app.rs  components.rs  config.rs  logging.rs  main.rs  tui.rs  windows.rs
src/components/: fps.rs  home.rs
src/controllers/: cpu.rs  disk.rs  gpu.rs  os.rs
