[package]
name = "povic"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
# sysinfo = { version = "0.36.1" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
human-panic = "2.0.3"
better-panic = "0.3.0"
futures = "0.3.31"
libc = { version = "0.2.174", features = ["use_std"] }
strip-ansi-escapes = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
color-eyre = "0.6.5"
lazy_static = "1.5.0"
strum = "0.27.2"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
machine-info = "1.0.9"
cruct = "1.0.0"
cruct_shared = "1.0.0"
translatable = "1.0.0"
signal-hook = "0.3.18"

[dependencies.crossterm]
version = "0.29"
features = ["event-stream", "serde"]
